--- a/index.html
+++ b/index.html
@@ -51,44 +51,43 @@
         <br>
         <div class="image-gallery">
             <div class="gallery-item">
-                <a href="shop.html">
-                    <img src="./imageSrc/sample.png" alt="Spice 1">
+                <a href="category.html">
+                    <img src="./imageSrc/cumin.png" alt="Spice 1">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="shop.html">
-                    <img src="./imageSrc/sample.png" alt="Spice 2">
+                <a href="category.html">
+                    <img src="./imageSrc/cumin.png" alt="Spice 2">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="shop.html">
-                    <img src="./imageSrc/sample.png" alt="Spice 3">
+                <a href="category.html">
+                    <img src="./imageSrc/cumin.png" alt="Spice 3">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="shop.html">
-                    <img src="./imageSrc/sample.png" alt="Spice 4 ">
+                <a href="category.html">
+                    <img src="./imageSrc/cumin.png" alt="Spice 4 ">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="shop.html">
-                    <img src="./imageSrc/sample.png" alt="Spice 5">
+                <a href="category.html">
+                    <img src="./imageSrc/cumin.png" alt="Spice 5">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="shop.html">
-                    <img src="./imageSrc/sample.png" alt="Spice 6">
+                <a href="category.html">
+                    <img src="./imageSrc/cumin.png" alt="Spice 6">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="shop.html">
-                    <img src="./imageSrc/sample.png" alt="Spice 7">
+                <a href="category.html">
+                    <img src="./imageSrc/cumin.png" alt="Spice 7">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="shop.html">
-                    <img src="./imageSrc/sample.png" alt="Spice 8">
-                </a>
+                <a href="category.html">
+                    <img src="./imageSrc/cumin.png" alt="Spice 8">
             </div>
         </div>
     </div>
